# coredns

./: .dockerignore  .gitignore  Corefile  Dockerfile  Makefile  blacklists.db  coredns-log-split.sh  go.mod  go.sum  plugin.cfg
blacklist/: domains.hosts  domains.txt
core/dnsserver/: path.go  server_https.go  server_tls.go  zdirectives.go
core/plugin/: zplugin.go
deployment/dev/: Corefile  Installation.md  dns.heze+4-key.pem  dns.heze+4.pem  dns.heze+6-key.pem  dns.heze+6.pem
deployment/prod/: Corefile  Installation.md  dns.heze+6.pem  doh.fxn.tech.key  doh.fxn.tech.pem  doh.qa.fxn.tech.key  doh.qa.fxn.tech.pem  doh1.qa.fxn.tech.pem
deployment/qa/: Corefile  dns.heze+6-key.pem  doh.qa.fxn.tech.key  doh.qa.fxn.tech.pem  doh1.qa.fxn.tech.key
plugin/blockchain/: blockchain.go  setup.go
plugin/chainInteract/: README.md  chainInteract.go  metrics.go  ready.go  setup.go  setup_test.go
plugin/forward/: forward.go  persistent.go
plugin/pkg/doh/: doh.go
plugin/pkg/log/: log.go
plugin/pkg/tls/: tls.go
plugin/resolver/: dnssec.go  dnssec_test.go  match.go  match_test.go  metrics.go  resolver.go  resolver_test.go  setup.go  setup_test.go
plugin/warnlist/: domains.go  plugin.go  setup.go  warnlist.go  warnlist_test.go
test/autotest/: README.md  pyproject.toml  recursive_test.py
test/autotest/dataset/: basic_result.csv  basic_testcase.csv  doh_json_result.csv  doh_json_testcase.csv
