[tool.poetry]
name = "dns-test"
version = "0.1.0"
description = ""
authors = ["LY"]

[tool.poetry.dependencies]
python = "^3.6"
dnspython = {extras = ["doh"], version = "^2.0.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
